--- a/monitoring/values.yaml.example
+++ b/monitoring/values.yaml.example
@@ -3,7 +3,7 @@ objstoreConfig: |-
   config:
     bucket: thanos
     endpoint: {{ include "thanos.minio.fullname" . }}.monitoring.svc.cluster.local:9000
-    access_key: admin
+    access_key: minio
     secret_key: KEY
     insecure: true
 querier:
@@ -29,7 +29,7 @@ ruler:
 minio:
   enabled: true
   accessKey:
-    password: "admin"
+    password: "minio"
   secretKey:
     password: "KEY"
   defaultBuckets: "thanos"
